--- a/template.html
+++ b/template.html
@@ -21,13 +21,13 @@
             <div class='card mb-3' style='max-width: 540px;'>
               <div class='row no-gutters'>
                 <div class='col-md-4'>
-                  <img src='{{ book.img_path|urlencode }}' class='card-img' alt='Обложка книги {{ book.title }}'>
+                  <img src='../{{ book.img_path|urlencode }}' class='card-img' alt='Обложка книги {{ book.title }}'>
                 </div>
                 <div class='col-md-8'>
                   <div class='card-body'>
                     <h5 class='card-title'>{{ book.title }}</h5>
                     <p class='card-text'>{{ book.author }}</p>
-                    <p class='card-text'><a href = '{{ book.txt_path|urlencode }}' target='_blank'>Читать</a></p>
+                    <p class='card-text'><a href = '../{{ book.txt_path|urlencode }}' target='_blank'>Читать</a></p>
                   </div>
                 </div>
               </div>
