--- a/template.html
+++ b/template.html
@@ -14,6 +14,30 @@
 
 <body>
   <div class='container'>
+    <nav aria-label='Page navigation example'>
+      <ul class='pagination'>
+        {% if current_page == 1 %}
+          <li class='page-item disabled'>
+        {% else %}
+          <li class='page-item'>
+        {% endif %}
+        <a class='page-link' href='index{{ current_page - 1}}.html'>Предыдущая</a></li>
+          {% for page_num in range(1, pages_amount + 1) %}
+            {% if page_num == current_page %}
+              <li class='page-item active'>
+            {% else %}
+              <li class='page-item'>
+            {% endif %}
+            <a class='page-link' href='index{{ page_num }}.html'>{{ page_num }}</a></li>
+          {% endfor %}
+        {% if current_page == pages_amount %}
+          <li class='page-item disabled'>
+        {% else %}
+          <li class='page-item'>
+        {% endif %}
+        <a class='page-link' href='index{{ current_page + 1 }}.html'>Следующая</a></li>
+      </ul>
+    </nav>
     <div class='row'>
       {% for row in books %}
         {% for book in row %}
