--- a/template.html
+++ b/template.html
@@ -9,7 +9,7 @@
   <!-- Bootstrap CSS -->
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css' integrity='sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2' crossorigin='anonymous'>
 
-  <title>Книги с тулулулулулу</title>
+  <title>Книги | Страница {{ current_page }}</title>
 </head>
 
 <body>
@@ -51,6 +51,11 @@
                   <div class='card-body'>
                     <h5 class='card-title'>{{ book.title }}</h5>
                     <p class='card-text'>{{ book.author }}</p>
+                    <p class='card-text'>
+                      {% for genre in book.genres %}
+                        <span class="badge badge-secondary">{{ genre }}</span>
+                      {% endfor %}
+                    </p>
                     <p class='card-text'><a href = '../{{ book.txt_path|urlencode }}' target='_blank'>Читать</a></p>
                   </div>
                 </div>
