--- a/template.html
+++ b/template.html
@@ -7,7 +7,11 @@
   <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
 
   <!-- Bootstrap CSS -->
-  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css' integrity='sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2' crossorigin='anonymous'>
+  <link rel='stylesheet' href='../static/css/bootstrap.min.css'>
+
+  <link rel='icon' type='image/png' href='../media/favicon-16x16.png' sizes='16x16'>
+  <link rel='icon' type='image/png' href='../media/favicon-32x32.png' sizes='32x32'>
+  <link rel='icon' type='image/png' href='../media/favicon-96x96.png' sizes='96x96'>
 
   <title>Книги | Страница {{ current_page }}</title>
 </head>
@@ -45,7 +49,7 @@
             <div class='card mb-3' style='max-width: 540px;'>
               <div class='row no-gutters'>
                 <div class='col-md-4'>
-                  <img src='../{{ book.img_path|urlencode }}' class='card-img' alt='Обложка книги {{ book.title }}'>
+                  <img src='../media/{{ book.img_path|urlencode }}' class='card-img' alt='Обложка книги {{ book.title }}'>
                 </div>
                 <div class='col-md-8'>
                   <div class='card-body'>
@@ -53,10 +57,10 @@
                     <p class='card-text'>{{ book.author }}</p>
                     <p class='card-text'>
                       {% for genre in book.genres %}
-                        <span class="badge badge-secondary">{{ genre }}</span>
+                        <span class='badge badge-secondary'>{{ genre }}</span>
                       {% endfor %}
                     </p>
-                    <p class='card-text'><a href = '../{{ book.txt_path|urlencode }}' target='_blank'>Читать</a></p>
+                    <p class='card-text'><a href = '../media/{{ book.txt_path|urlencode }}' target='_blank'>Читать</a></p>
                   </div>
                 </div>
               </div>
@@ -68,17 +72,10 @@
 
     </div>
   </div>
-  <!-- Optional JavaScript; choose one of the two! -->
 
-  <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-  <script src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous'></script>
-  <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js' integrity='sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx' crossorigin='anonymous'></script>
+  <script src='../static/js/jquery-3.5.1.slim.min.js'></script>
+  <script src='../static/js/bootstrap.bundle.min.js'></script>
 
-  <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-    <script src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous'></script>
-    <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js' integrity='sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN' crossorigin='anonymous'></script>
-    <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js' integrity='sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s' crossorigin='anonymous'></script>
-    -->
 </body>
 
 </html>
