--- a/template.html
+++ b/template.html
@@ -49,7 +49,7 @@
             <div class='card mb-3' style='max-width: 540px;'>
               <div class='row no-gutters'>
                 <div class='col-md-4'>
-                  <img src='../media/{{ book.img_path|urlencode }}' class='card-img' alt='Обложка книги {{ book.title }}'>
+                  <img src='../{{ book.img_path|urlencode }}' class='card-img' alt='Обложка книги {{ book.title }}'>
                 </div>
                 <div class='col-md-8'>
                   <div class='card-body'>
@@ -60,7 +60,7 @@
                         <span class='badge badge-secondary'>{{ genre }}</span>
                       {% endfor %}
                     </p>
-                    <p class='card-text'><a href = '../media/{{ book.txt_path|urlencode }}' target='_blank'>Читать</a></p>
+                    <p class='card-text'><a href = '../{{ book.txt_path|urlencode }}' target='_blank'>Читать</a></p>
                   </div>
                 </div>
               </div>
