Add spacing to pagination

--- a/template.html
+++ b/template.html
@@ -19,7 +19,7 @@
 <body>
   <div class='container'>
     <nav aria-label='Page navigation example'>
-      <ul class='pagination'>
+      <ul class='pagination pt-3 pb-3 border-bottom'>
         {% if current_page == 1 %}
           <li class='page-item disabled'>
         {% else %}
